; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/stdio/extr_vfscanf.c___vfscanf.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/stdio/extr_vfscanf.c___vfscanf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__vfscanf(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @FLOCKFILE_CANCELSAFE(i32* %8)
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 (...) @__get_locale()
  %12 = load i8*, i8** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @__svfscanf(i32* %10, i32 %11, i8* %12, i32 %13)
  store i32 %14, i32* %7, align 4
  %15 = call i32 (...) @FUNLOCKFILE_CANCELSAFE()
  %16 = load i32, i32* %7, align 4
  ret i32 %16
}

declare dso_local i32 @FLOCKFILE_CANCELSAFE(i32*) #1

declare dso_local i32 @__svfscanf(i32*, i32, i8*, i32) #1

declare dso_local i32 @__get_locale(...) #1

declare dso_local i32 @FUNLOCKFILE_CANCELSAFE(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
